# CHIME-vla

./: .gitignore  .pre-commit-config.yaml  CODE_STANDARDS.md  CODE_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
chat/: architecture_v2.1.md  architecture_v2_FINAL.md  chime_vla_proposal.md
configs/: default.yaml
configs/base/: chime.yaml
configs/experiment/: debug.yaml
configs/model/: chime_full.yaml  chime_mvp.yaml
configs/train/: m0_smoke.yaml  m1_smoke.yaml  m2_mvp_fallback.yaml  m2_phi_only.yaml  m2_prh_only.yaml  m3_main_prh.yaml  m4_full_5loss.yaml  m6_ablation_template.yaml
docs/: autonomous_execution.md  grad_flow_contract.md  hindsight_contract.md
scripts/: 00_build_libero_cache.py  01_run_hindsight_consumer.py  05_compute_hcs_saliency.py  10_train.py  20_eval_sr.py  30_run_ablation.py  40_run_e1_judgment.py  41_analyze_m2_curves.py  42_e1_with_full_hcs.py  50_viz_episode.py  51_rollout_closed_loop.py
src/chime_vla/: __init__.py  config.py
src/chime_vla/action/: __init__.py  action_expert.py
src/chime_vla/eval/: __init__.py  e1_judgment.py
src/chime_vla/heads/: __init__.py  csm.py  espc.py  geo_write.py  prh.py  sem_write.py
src/chime_vla/hindsight/: __init__.py  consumer.py
src/chime_vla/memory/: __init__.py  geo_grid.py  lru.py  sem_bank.py
src/chime_vla/perception/: __init__.py  _siglip_wrapper.py  fifo_buffer.py  vlm_backbone.py
src/chime_vla/readout/: __init__.py  read_interface.py
src/chime_vla/training/: __init__.py  datamodule.py  entry.py  hcs_head.py  lightning_module.py  losses.py  schedules.py  train_step.py
src/chime_vla/utils/: __init__.py  distributed.py  git_info.py  grad_flow_check.py  letterbox.py  losses.py  memory_reset.py  seeding.py
tests/: conftest.py  test_forward_shapes.py  test_grad_flow.py  test_hcs_head.py  test_hindsight_consumer.py  test_loss_finite.py  test_memory_reset.py  test_slot_lifecycle.py
