[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chime-vla"
version = "0.1.0"
description = "CHIME-VLA: Cross-modal Hierarchical Memory for VLA — online VLA with [C1..C13] memory architecture (architecture v2.1)."
requires-python = ">=3.10"
dependencies = [
    # Core
    # NOTE: Hindsight pyproject pinned torch>=2.1,<2.5 / lightning>=2.1,<2.5 /
    # hydra<1.4 / numpy<2.0; the host env (Python 3.13, torch 2.11, lightning
    # 2.6.1, hydra 1.3.2) is newer than that pin permits.  We widen the upper
    # bounds so `pip install -e .` succeeds; align back if the env regresses.
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "transformers>=4.40",
    # IO
    "pyarrow>=14.0",
    "av>=11.0.0",                  # PyAV — AV1 decode
    "imageio>=2.30",
    "imageio-ffmpeg>=0.4.9",
    "h5py>=3.9",                   # CHIME-specific: read LIBERO h5
    # Numeric / viz
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tensorboard>=2.15",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
    "ipython",
    "pandas>=2.0",
]
wandb = ["wandb>=0.16"]
einops = ["einops>=0.7"]

[project.scripts]
chime-train = "chime_vla.training.entry:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chime_vla*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
# N802/N803/N806: tensor-shape names (T, B, D, H, W) are uppercase by codebase
# convention (CODE_STANDARDS §4.1).  N812: third-party imports as `pl`/`F`.
ignore = ["E501", "N802", "N803", "N806", "N812", "B008"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
